--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,33 @@ code {
 
 /* new code */
 
+/* modal */
+.modal {
+  height: 0px;
+  width: 0px;
+  background-color: #3b3b3b;
+  color: white;
+  transition: opacity 4.3s;
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 20px;
+  padding: 20px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.modal-active {
+  opacity: 1;
+  visibility: visible;
+  height: 200px;
+  width: 200px;
+}
+
