--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ code {
   width: 0px;
   background-color: #3b3b3b;
   color: white;
-  transition: opacity 4.3s;
+  transition: opacity 0.3s;
   visibility: hidden;
   opacity: 0;
   position: absolute;
@@ -45,3 +45,17 @@ code {
   width: 200px;
 }
 
+
+
+/* box challenge */
+
+.container {
+  display: flex;
+}
+
+.box {
+  height: 100px;
+  width: 100px;
+  border: 1px solid black;
+  margin: 3px;
+}
